# arcana

./: CMakeLists.txt  README.md
arcana/: CMakeLists.txt
arcana/tensor/: CMakeLists.txt
arcana/tensor/include/arcana/expression/: expression.hpp
arcana/tensor/include/arcana/tensor/: static_tensor.hpp  tensor.hpp  tensor_arithmetic.hpp  tensor_base.hpp  tensor_generators.hpp  tensor_io.hpp  tensor_methods.hpp  tensor_operations.hpp
docs/: README.md
docs/tensor/: README.md
scripts/: clean.sh
tests/: CMakeLists.txt  static_tensor_test.cpp  tensor_test.cpp
